--- a/src/index.html
+++ b/src/index.html
@@ -13,56 +13,29 @@
     <div id="main-container">
         <div id="side-bar"></div>
         <div id="content-container">
-            <div id="big-preview-container"><h1></h1></div>
+            <div id="big-preview-container">
+                <h1></h1>
+            </div>
             <div id="snippets-container">
                 <div class="snippet-block rounded">
                     <div class="snippet-code">
-                        <p>document.addEventListener("DOMContentLoaded", function() {
-    // Get the big preview container
-    const bigPreviewContainer = document.getElementById("big-preview-container");
-
-    // Get all the snippet blocks
-    const snippetBlocks = document.querySelectorAll(".snippet-block");
-
-    // Add click event listeners to each snippet block
-    snippetBlocks.forEach(function(snippetBlock) {
-        // Add click event listener to the whole snippet block
-        snippetBlock.addEventListener("click", function() {
-            // Get the content of the snippet code inside the clicked snippet block
-            const snippetCodeContent = snippetBlock.querySelector(".snippet-code p").textContent;
-
-            // Update the content of the big preview container
-            bigPreviewContainer.textContent = snippetCodeContent;
-        });
-
-        // Add click event listener to the snippet code element
-        const snippetCode = snippetBlock.querySelector(".snippet-code");
-        snippetCode.addEventListener("click", function(event) {
-            // Stop event propagation to prevent the whole snippet block from triggering
-            event.stopPropagation();
-
-            // Get the content of the snippet code inside the clicked snippet block
-            const snippetCodeContent = snippetCode.querySelector("p").textContent;
-
-            // Update the content of the big preview container
-            bigPreviewContainer.textContent = snippetCodeContent;
-        });
-
-        // Add click event listener to the snippet name element
-        const snippetName = snippetBlock.querySelector(".snippet-name");
-        snippetName.addEventListener("click", function(event) {
-            // Stop event propagation to prevent the whole snippet block from triggering
-            event.stopPropagation();
-
-            // Get the content of the snippet code inside the clicked snippet block
-            const snippetCodeContent = snippetBlock.querySelector(".snippet-code p").textContent;
-
-            // Update the content of the big preview container
-            bigPreviewContainer.textContent = snippetCodeContent;
-        });
-    });
-});
-</p>
+                        <p>code</p>
+                    </div>
+                    <div class="snippet-name d-flex align-items-center">
+                        <p class="col-6">console log snippet</p>
+                    </div>
+                </div>
+                <div class="snippet-block">
+                    <div class="snippet-code">
+                        <p>console.log('hi');</p>
+                    </div>
+                    <div class="snippet-name">
+                        <p>console log snippet</p>
+                    </div>
+                </div>
+                <div class="snippet-block">
+                    <div class="snippet-code">
+                        <p>console.log('hi');</p>
                     </div>
                     <div class="snippet-name">
                         <p>console log snippet</p>
@@ -108,14 +81,6 @@
                         <p>console log snippet</p>
                     </div>
                 </div>
-                                <div class="snippet-block">
-                    <div class="snippet-code">
-                        <p>console.log('hi');</p>
-                    </div>
-                    <div class="snippet-name">
-                        <p>console log snippet</p>
-                    </div>
-                </div>
                 <div class="snippet-block">
                     <div class="snippet-code">
                         <p>console.log('hi');</p>
@@ -125,14 +90,6 @@
                     </div>
                 </div>
                 <div class="snippet-block">
-                    <div class="snippet-code">
-                        <p>console.log('hi');</p>
-                    </div>
-                    <div class="snippet-name">
-                        <p>console log snippet</p>
-                    </div>
-                </div>
-                                <div class="snippet-block">
                     <div class="snippet-code">
                         <p>console.log('hi');</p>
                     </div>
