--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,26 @@
     <div id="main-container">
         <div id="side-bar">
             <div id="groups-container">
-                <div class="side-group-name rounded d-flex justify-content-center">
-                    <p>words 1</p>
+                <div class="side-group-name center-block rounded d-flex justify-content-center">
+                    <p>words 1 232323232323232</p>
                 </div>
             </div>
+            <div id="groups-container">
+                <div class="side-group-name center-block rounded d-flex justify-content-center">
+                    <p>words 2</p>
+                </div>
+            </div>
+            <div id="groups-container">
+                <div class="side-group-name center-block rounded d-flex justify-content-center">
+                    <p>words 3</p>
+                </div>
+            </div>
+            <div id="groups-container">
+                <div class="side-group-name center-block rounded d-flex justify-content-center">
+                    <p>words 4</p>
+                </div>
+            </div>
+
             <div id="addSnippetButton" onclick="showAddSnippetContextMenu(event)">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
