--- a/src/index.html
+++ b/src/index.html
@@ -14,24 +14,7 @@
     <div id="main-container">
         <div id="side-bar">
             <div id="groups-container">
-                <div class="side-group-name center-block rounded d-flex justify-content-center">
-                    <p>words 1 232323232323232</p>
-                </div>
-            </div>
-            <div id="groups-container">
-                <div class="side-group-name center-block rounded d-flex justify-content-center">
-                    <p>words 2</p>
-                </div>
-            </div>
-            <div id="groups-container">
-                <div class="side-group-name center-block rounded d-flex justify-content-center">
-                    <p>words 3</p>
-                </div>
-            </div>
-            <div id="groups-container">
-                <div class="side-group-name center-block rounded d-flex justify-content-center">
-                    <p>words 4</p>
-                </div>
+
             </div>
 
             <div id="addSnippetButton" onclick="showAddSnippetContextMenu(event)">
@@ -51,10 +34,10 @@
         </div>
         <div id="content-container">
             <div id="big-preview-container" class="rounded">
-                <p></p>
+                <pre></pre>
             </div>
             <div id="snippets-container"></div>
-       </div>
+        </div>
     </div>
 </body>
 
