--- a/src/index.html
+++ b/src/index.html
@@ -34,23 +34,25 @@
         </div>
         <div id="content-container">
             <div id="big-preview-container" class="rounded">
-                <button id="expandButton" onclick="toggleBigPreviewHeight()">
-                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="24px" height="24"
-                        viewBox="0 0 134.000000 134.000000" preserveAspectRatio="xMidYMid meet">
+                <div id="button-container">
+                    <button id="expandButton" onclick="toggleBigPreviewHeight()">
+                        <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="24px" height="24"
+                            viewBox="0 0 134.000000 134.000000" preserveAspectRatio="xMidYMid meet">
 
-                        <g transform="translate(0.000000,134.000000) scale(0.100000,-0.100000)" fill="#000000"
-                            stroke="none">
-                            <path d="M866 1318 c-20 -29 -20 -34 4 -58 18 -18 33 -20 157 -20 l137 0 -157
--158 c-86 -87 -157 -164 -157 -170 0 -18 38 -52 57 -52 9 0 85 68 170 152
-l153 152 0 -131 c0 -113 3 -134 19 -154 16 -20 23 -22 47 -14 l29 10 3 219 c2
-153 -1 223 -9 232 -9 11 -56 14 -225 14 -209 0 -213 0 -228 -22z" />
-                            <path d="M22 474 c-22 -15 -22 -19 -22 -228 0 -151 3 -215 12 -224 9 -9 74
--12 230 -12 208 0 218 1 228 20 15 28 3 59 -27 71 -13 5 -79 9 -146 9 l-121 0
-152 153 c84 85 152 161 152 170 0 19 -34 57 -52 57 -6 0 -83 -71 -170 -157
-l-158 -157 0 137 c0 124 -2 139 -20 157 -24 24 -29 24 -58 4z" />
-                        </g>
-                    </svg>
-                </button>
+                            <g transform="translate(0.000000,134.000000) scale(0.100000,-0.100000)" fill="#000000"
+                                stroke="none">
+                                <path d="M866 1318 c-20 -29 -20 -34 4 -58 18 -18 33 -20 157 -20 l137 0 -157
+                                    -158 c-86 -87 -157 -164 -157 -170 0 -18 38 -52 57 -52 9 0 85 68 170 152
+                                    l153 152 0 -131 c0 -113 3 -134 19 -154 16 -20 23 -22 47 -14 l29 10 3 219 c2
+                                    153 -1 223 -9 232 -9 11 -56 14 -225 14 -209 0 -213 0 -228 -22z" />
+                                <path d="M22 474 c-22 -15 -22 -19 -22 -228 0 -151 3 -215 12 -224 9 -9 74
+                                    -12 230 -12 208 0 218 1 228 20 15 28 3 59 -27 71 -13 5 -79 9 -146 9 l-121 0
+                                    152 153 c84 85 152 161 152 170 0 19 -34 57 -52 57 -6 0 -83 -71 -170 -157
+                                    l-158 -157 0 137 c0 124 -2 139 -20 157 -24 24 -29 24 -58 4z" />
+                            </g>
+                        </svg>
+                    </button>
+                </div>
                 <pre></pre>
             </div>
             <div id="snippets-container"></div>
