--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
             <div id="addSnippetContextMenu" class="context-menu">
                 <div onclick="createNewSnippetForm()">New Snippet</div>
                 <div onclick="createNewSnippetGroupForm()">New Snippet Group</div>
+                <div onclick="createDeleteSnippetGroupForm()" style="color: red;">Delete Snippet Group</div>
             </div>
         </div>
         <div id="content-container">
